--- a/BlogApp/Views/Blog/Add.cshtml
+++ b/BlogApp/Views/Blog/Add.cshtml
@@ -10,7 +10,7 @@
 <!-- Form -->
 <div class="container mt-5 add-blog-form">
     <h2 class="mb-4">Add new blog</h2>
-    <form asp-action="Add" method="post">
+    <form method="post">
         <div class="mb-3">
             <label for="blogTitle" class="form-label">Title of the blog</label>
             <input type="text" class="form-control" id="blogTitle" asp-for="Title">
