--- a/BlogApp/Views/Blog/Add.cshtml
+++ b/BlogApp/Views/Blog/Add.cshtml
@@ -22,3 +22,4 @@
         <button type="submit" class="btn btn-primary">Add this blog</button>
     </form>
 </div>
+<script src="~/js/script.js"></script>
