--- a/BlogApp/Views/Blog/Add.cshtml
+++ b/BlogApp/Views/Blog/Add.cshtml
@@ -13,11 +13,11 @@
     <form method="post">
         <div class="mb-3">
             <label for="blogTitle" class="form-label">Title of the blog</label>
-            <input type="text" class="form-control" id="blogTitle" asp-for="Title">
+            <input type="text" class="form-control" id="blogTitle" asp-for="Title" required>
         </div>
         <div class="mb-3">
             <label for="blogText" class="form-label">Body of the blog</label>
-            <textarea class="form-control" id="blogText" rows="5" asp-for="Body"></textarea>
+            <textarea class="form-control" id="blogText" rows="5" asp-for="Body" required></textarea>
         </div>
         <button type="submit" class="btn btn-primary">Add this blog</button>
     </form>
