--- a/BlogApp/Views/Blog/Blog.cshtml
+++ b/BlogApp/Views/Blog/Blog.cshtml
@@ -21,5 +21,5 @@
     </div>
     <a asp-action="Index" asp-controller="Home" class="btn btn-secondary rounded-pill px-3" role="button">Back</a>
     <a asp-action="Delete" asp-controller="Blog" asp-route-id="@Model.Id" class="btn btn-secondary rounded-pill px-3 float-end" role="button" onclick="return confirm('Naozaj chcete vymazať tento blog?');">Delete</a>
-    <a asp-action="Edit" asp-controller="Blog" asp-route-id="@Model.Id" class="btn btn-secondary rounded-pill px-3" role="button">Edit</a>
+    <a asp-action="Edit" asp-controller="Blog" asp-route-id="@Model.Id" class="btn btn-secondary rounded-pill px-3 float-end" role="button">Edit</a>
 </div>
