--- a/BlogApp/Views/Blog/Edit.cshtml
+++ b/BlogApp/Views/Blog/Edit.cshtml
@@ -11,12 +11,12 @@
     <form asp-action="Edit" method="post">
         <div class="mb-3">
             <label asp-for="Title" class="form-label"></label>
-            <input asp-for="Title" class="form-control" />
+            <input asp-for="Title" class="form-control" required/>
             <span asp-validation-for="Title" class="text-danger"></span>
         </div>
         <div class="mb-3">
             <label asp-for="Body" class="control-label"></label>
-            <textarea asp-for="Body" class="form-control" rows="10"></textarea>
+            <textarea asp-for="Body" class="form-control" rows="10" required></textarea>
             <span asp-validation-for="Body" class="text-danger"></span>
         </div>
         <input type="hidden" asp-for="Id" />
