Added login session (userId) functionality

--- a/BlogApp/Views/Home/Index.cshtml
+++ b/BlogApp/Views/Home/Index.cshtml
@@ -1,12 +1,13 @@
 ﻿@{
     ViewData["Title"] = "Hlavná stránka";
+    var userId = Context.Session.GetInt32("userId");
 }
 
 @model IEnumerable<BlogApp.Models.Blog>
 
 <!-- Content -->
 <div class="container px-4 py-4">
-    <h2 class="pb-2 border-bottom">All Blogs</h2>
+    <h2 class="pb-2 border-bottom">All Blogs, current user id: @(userId ?? 0)</h2>
     <div class="row g-4 py-5 row-cols-1 row-cols-lg-2">
 
         @foreach (var blog in Model.Reverse())
