--- a/BlogApp/Views/Shared/_LayoutLogin.cshtml
+++ b/BlogApp/Views/Shared/_LayoutLogin.cshtml
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="~/css/styles.css">
     <title>@ViewData["Title"] - BlogApp</title>
 </head>
-<body>
-    <main role="main" class="pb-3">
+<body class="login-gray-background">
+    <main role="main">
         @RenderBody()
     </main>
     
