--- a/BlogApp/Views/Authentication/Index.cshtml
+++ b/BlogApp/Views/Authentication/Index.cshtml
@@ -3,39 +3,28 @@
     ViewData["Title"] = "Login";
 }
 
-<div class="row d-flex justify-content-center align-items-center h-100 px-5">
+<div class="row d-flex justify-content-center align-items-center w-100 px-5 border">
     <div class="col-md-9 col-lg-6 col-xl-6 my-lg-5">
         <img src="images/undraw_fingerprint-login_19qv.svg" class="img-fluid" alt="Login image">
     </div>
-    <div class="col-md-8 col-lg-6 col-xl-5 offset-xl-1  py-lg-5 border">
-        <form>
-                        <!-- Email input -->
+    <div class="col-md-8 col-lg-6 col-xl-5 offset-xl-1  py-lg-5">
+    <h1 class="mb-5">Blogs app</h1>
+        <form method="post" asp-controller="Authentication" asp-action="Login">
+            <!-- Login input -->
             <div data-mdb-input-init="" class="form-outline mb-4" data-mdb-input-initialized="true">
-                <input type="email" id="form3Example3" class="form-control form-control-lg" placeholder="Enter a valid login">
-                @* <label class="form-label" for="form3Example3" style="margin-left: 0px;">Login</label> *@
-                <div class="form-notch"><div class="form-notch-leading" style="width: 9px;"></div><div class="form-notch-middle" style="width: 88.8px;"></div><div class="form-notch-trailing"></div></div>
+                <input type="text" id="form3Example3" class="form-control form-control-lg" name="login" placeholder="Login">
+                <div class="form-notch"><div class="form-notch-leading" style="width: 9px;"></div>
+                <div class="form-notch-middle" style="width: 88.8px;"></div><div class="form-notch-trailing"></div></div>
             </div>
 
             <!-- Password input -->
             <div data-mdb-input-init="" class="form-outline mb-3" data-mdb-input-initialized="true">
-                <input type="password" id="form3Example4" class="form-control form-control-lg" placeholder="Enter password">
-                <label class="form-label" for="form3Example4" style="margin-left: 0px;">Password</label>
+                <input type="password" id="form3Example4" class="form-control form-control-lg" name="password" placeholder="Password">
                 <div class="form-notch"><div class="form-notch-leading" style="width: 9px;"></div><div class="form-notch-middle" style="width: 64px;"></div><div class="form-notch-trailing"></div></div>
             </div>
 
-            <div class="d-flex justify-content-between align-items-center">
-                <!-- Checkbox -->
-                <div class="form-check mb-0">
-                    <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3">
-                    <label class="form-check-label" for="form2Example3">
-                        Remember me
-                    </label>
-                </div>
-                <a href="#!" class="text-body">Forgot password?</a>
-            </div>
-
             <div class="text-center text-lg-start mt-4 pt-2">
-                <button type="button" data-mdb-button-init="" data-mdb-ripple-init="" class="btn btn-primary btn-lg" style="padding-left: 2.5rem; padding-right: 2.5rem;" data-mdb-button-initialized="true">Login</button>
+                <button type="submit" class="btn btn-primary btn-lg" style="padding-left: 2.5rem; padding-right: 2.5rem;" data-mdb-button-initialized="true">Login</button>
                 <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a href="#!" class="link-danger">Register</a></p>
             </div>
 
