--- a/BlogApp/Views/Shared/_Layout.cshtml
+++ b/BlogApp/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                     <li><a class="dropdown-item" asp-action="Add" asp-controller="Blog"><i class="bi bi-plus-square"></i> Add blog</a></li>
                     <li><a class="dropdown-item" href="#"><i class="bi bi-gear"></i> Settings</a></li>
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="#"><i class="bi bi-door-closed"></i> Sign out</a></li>
+                    <li><a asp-controller="Authentication" asp-action="Logout" class="dropdown-item"><i class="bi bi-door-closed"></i> Sign out</a></li>
                 </ul>
             </div>
         </div>
