Added registration and filtration of owned blogs

--- a/BlogApp/Views/Shared/_Layout.cshtml
+++ b/BlogApp/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
 
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                 <li><a asp-controller="Home" asp-action="Index" class="nav-link px-2 link-secondary">All blogs</a></li>
-                <li><a href="#" class="nav-link px-2 link-body-emphasis">My blogs</a></li>
+                <li><a asp-controller="Home" asp-action="Index" asp-route-ownerOnly="true" class="nav-link px-2 link-body-emphasis">My blogs</a></li>
             </ul>
 
             <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
