Filtering blogs (AJAX), history back
Jumping on new line (<br> tag instead of \n in html)

--- a/BlogApp/Views/Blog/Add.cshtml
+++ b/BlogApp/Views/Blog/Add.cshtml
@@ -21,5 +21,15 @@
         </div>
         <button type="submit" class="btn btn-primary">Add this blog</button>
     </form>
+    <a onclick="Back()" class="btn btn-secondary rounded-pill px-3" role="button">Back</a>
 </div>
 <script src="~/js/script.js"></script>
+
+
+@section Scripts {
+    <script>
+        function Back() {
+            window.history.back();
+        }
+    </script>
+}
