--- a/BlogApp/Views/Shared/_Layout.cshtml
+++ b/BlogApp/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
             </ul>
 
             <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
-                <input type="search" class="form-control" placeholder="Search user..." aria-label="Search">
+                <input type="search" class="form-control" placeholder="Search user..." aria-label="Search" id="searchUser">
             </form>
 
             <div class="dropdown text-end">
