--- a/BlogApp/Views/Blog/Blog.cshtml
+++ b/BlogApp/Views/Blog/Blog.cshtml
@@ -16,7 +16,7 @@
             <p class="col-lg-12 fs-4 blog-body">
                 @Html.Raw(Model.Body)
             </p>
-            <p class="user">Jozef Rechtorík</p>
+            <p class="user"> @ViewBag.Nick </p>
         </div>
     </div>
     <a onclick="Back()" class="btn btn-secondary rounded-pill px-3" role="button">Back</a>
