--- a/BlogApp/Views/Shared/_Layout.cshtml
+++ b/BlogApp/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                 </a>
                 <ul class="dropdown-menu text-small" style="">
                     <li><a class="dropdown-item" asp-action="Add" asp-controller="Blog"><i class="bi bi-plus-square"></i> Add blog</a></li>
-                    <li><a class="dropdown-item" href="#"><i class="bi bi-gear"></i> Settings</a></li>
+                    <li><a class="dropdown-item" asp-action="Index" asp-controller="Profile"><i class="bi bi-gear"></i> Profile</a></li>
                     <li><hr class="dropdown-divider"></li>
                     <li><a asp-controller="Authentication" asp-action="Logout" class="dropdown-item"><i class="bi bi-door-closed"></i> Sign out</a></li>
                 </ul>
