--- a/BlogApp/Views/Blog/Blog.cshtml
+++ b/BlogApp/Views/Blog/Blog.cshtml
@@ -1,27 +1,33 @@
 ﻿@{
     ViewData["Title"] = "Blog";
+    var userId = Context.Session.GetInt32("userId");
 }
 
-@model BlogApp.Models.Blog
+@model BlogApp.Models.BlogBlogViewModel
 
 <!-- Blog content -->
 <div class="container col-xl-10 col-xxl-8 px-4 py-1 blog-main-container">
     <div class="row align-items-center g-lg-5 py-5">
         <div class="col-lg-12 text-center text-lg-start">
             <div class="d-flex align-items-center mb-3">
-                <h1 class="display-4 fw-bold lh-1 text-body-emphasis col-lg-9 col-12"> @Model.Title </h1>
-                <img src="/images/matus_fotka.jpg" alt="user photo" width="64" height="64" class="rounded-circle col-lg-3 ms-lg-3 blog-whoposted-img">
+                <h1 class="display-4 fw-bold lh-1 text-body-emphasis col-lg-9 col-12"> @Model.Blog.Title </h1>
+                <img src="@Model.User.ImagePath" alt="user photo" width="64" height="64" class="rounded-circle col-lg-3 ms-lg-3 blog-whoposted-img">
             </div>
 
             <p class="col-lg-12 fs-4 blog-body">
-                @Html.Raw(Model.Body)
+                @Html.Raw(Model.Blog.Body)
             </p>
-            <p class="user"> @ViewBag.Nick </p>
+            <p class="user"> @Model.User.Nick </p>
         </div>
     </div>
     <a onclick="Back()" class="btn btn-secondary rounded-pill px-3" role="button">Back</a>
-    <a asp-action="Delete" asp-controller="Blog" asp-route-id="@Model.Id" class="btn btn-secondary rounded-pill px-3 float-end" role="button" onclick="return confirm('Naozaj chcete vymazať tento blog?');">Delete</a>
-    <a asp-action="Edit" asp-controller="Blog" asp-route-id="@Model.Id" class="btn btn-secondary rounded-pill px-3 float-end" role="button">Edit</a>
+    @if (userId == Model.Blog.UserId)
+    {
+        <a asp-action="Delete" asp-controller="Blog" asp-route-id="@Model.Blog.Id" class="btn btn-secondary rounded-pill px-3 float-end" role="button" onclick="return confirm('Naozaj chcete vymazať tento blog?');">Delete</a>
+        <a asp-action="Edit" asp-controller="Blog" asp-route-id="@Model.Blog.Id" class="btn btn-secondary rounded-pill px-3 float-end" role="button">Edit</a>
+    }
+
+
 </div>
 
 @section Scripts {
