--- a/BlogApp/Views/Blog/Blog.cshtml
+++ b/BlogApp/Views/Blog/Blog.cshtml
@@ -6,18 +6,18 @@
 @model BlogApp.Models.BlogBlogViewModel
 
 <!-- Blog content -->
-<div class="container col-xl-10 col-xxl-8 px-4 py-1 blog-main-container">
+<div class="container col-xl-10 col-xxl-8 px-4 py-1 blog-main-container border">
     <div class="row align-items-center g-lg-5 py-5">
         <div class="col-lg-12 text-center text-lg-start">
             <div class="d-flex align-items-center mb-3">
                 <h1 class="display-4 fw-bold lh-1 text-body-emphasis col-lg-9 col-12"> @Model.Blog.Title </h1>
-                <img src="@Model.User.ImagePath" alt="user photo" width="64" height="64" class="rounded-circle col-lg-3 ms-lg-3 blog-whoposted-img">
+                <img src="@Model.Owner.ImagePath" alt="user photo" @* width="64" height="64" *@ class="rounded-circle col-lg-3 ms-lg-3 blog-whoposted-img">
             </div>
 
             <p class="col-lg-12 fs-4 blog-body">
                 @Html.Raw(Model.Blog.Body)
             </p>
-            <p class="user"> @Model.User.Nick </p>
+            <p class="user"> @Model.Owner.Nick </p>
         </div>
     </div>
     <a onclick="Back()" class="btn btn-secondary rounded-pill px-3" role="button">Back</a>
@@ -26,9 +26,9 @@
         <a asp-action="Delete" asp-controller="Blog" asp-route-id="@Model.Blog.Id" class="btn btn-secondary rounded-pill px-3 float-end" role="button" onclick="return confirm('Naozaj chcete vymazať tento blog?');">Delete</a>
         <a asp-action="Edit" asp-controller="Blog" asp-route-id="@Model.Blog.Id" class="btn btn-secondary rounded-pill px-3 float-end" role="button">Edit</a>
     }
-
-
 </div>
+
+@Html.Partial("Comments", Model)
 
 @section Scripts {
     <script>
