Added deleting Users

--- a/BlogApp/Views/Blog/Blog.cshtml
+++ b/BlogApp/Views/Blog/Blog.cshtml
@@ -11,7 +11,7 @@
         <div class="col-lg-12 text-center text-lg-start">
             <div class="d-flex align-items-center mb-3">
                 <h1 class="display-4 fw-bold lh-1 text-body-emphasis col-lg-9 col-12"> @Model.Blog.Title </h1>
-                <img src="@Model.Owner.ImagePath" alt="user photo" @* width="64" height="64" *@ class="rounded-circle col-lg-3 ms-lg-3 blog-whoposted-img">
+                <img src="@Model.Owner.ImagePath" alt="user photo" @* width="64" height="64" *@ class="rounded-circle col-lg-3 ms-lg-3 blog-whoposted-img not-distorted">
             </div>
 
             <p class="col-lg-12 fs-4 blog-body">
