--- a/BlogApp/Views/Shared/_Layout.cshtml
+++ b/BlogApp/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
     <div class="container-header">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
 
-            <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+            <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0 mynavbar-ul">
                 <li><a asp-controller="Home" asp-action="Index" class="nav-link px-2 link-secondary">All blogs</a></li>
                 <li><a asp-controller="Home" asp-action="Index" asp-route-ownerOnly="true" class="nav-link px-2 link-body-emphasis">My blogs</a></li>
             </ul>
