--- a/BlogApp/wwwroot/css/styles.css
+++ b/BlogApp/wwwroot/css/styles.css
@@ -1,10 +1,7 @@
 ﻿@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 
-:root {
-    --index-blog-title-color: #3498db;
-}
-
 body {
+    --index-blog-title-color: #3498db;
     font-size: 1em;
 }
 
@@ -103,8 +100,6 @@ p.home-blog-tags::before {
 }
 
 .profile-container {
-    /*width: 100%;*/
-    /*margin: 3rem;*/
     text-align: center;
 }
 .profile-whoami-img {
@@ -127,6 +122,9 @@ p.home-blog-tags::before {
 
 .index-search-item {
     margin: 0.5em;
+}
+.mynavbar-ul {
+    font-size: 1.5em;
 }
 
 @media (max-width: 768px) { /* Pre tablety */
